pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
  namespace: cloud
  labels:
    name: dev
spec:
  containers:
  - name: server
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
