deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: cloud
spec:
  selector:
    matchLabels:
      app: web-server
  replicas: 1
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: server
        image: nginx:1.7.9
        resources:
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  selector:
    app: web-server
  ports:
  - port: 80
    targetPort: 80
