ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-facing
  namespace: cloud
  labels:
    name: dev
spec:
  rules:
  -  http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-server
            port: 
              number: 80
